<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_test_node</name>
  <version>0.2.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Christian.Rauch@unileoben.ac.at">christian</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>my_test_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
